fixed letter spacing on individual-project

--- a/src/sass/components/_individual-project.scss
+++ b/src/sass/components/_individual-project.scss
@@ -90,7 +90,7 @@
         margin: 0rem;
         font-size: 1.2rem;
         font-weight: 700;
-        letter-spacing: 1.5px;
+        letter-spacing: 1px;
     }
 
     p {
